[GStreamer] Playback rate is not set when pipeline is not ready. https://bugs.webkit.org/show_bug.cgi?id=126692

Patch by Piotr Grad <p.grad@samsung.com> on 2014-01-14
Reviewed by Philippe Normand.

No new tests. Covered by existing tests.

Added new method updatePlaybackRate which is called when playback rate change is possible.
Added m_lastPlaybackRate in order to retrieve last correct playback rate and notify upper
layers about that setting playback rate failed.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::MediaPlayerPrivateGStreamer):
(WebCore::MediaPlayerPrivateGStreamer::updatePlaybackRate):
(WebCore::MediaPlayerPrivateGStreamer::setRate):
(WebCore::MediaPlayerPrivateGStreamer::updateStates):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/144968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161984 268f45cc-cd09-0410-ab3c-d52691b4dbfc