Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
@@ -250,6 +250,7 @@ MediaPlayerPrivateGStreamer::MediaPlayerPrivateGStreamer(MediaPlayer* player)
     , m_timeOfOverlappingSeek(-1)
     , m_buffering(false)
     , m_playbackRate(1)
+    , m_lastPlaybackRate(1)
     , m_errorOccured(false)
     , m_mediaDuration(0)
     , m_downloadFinished(false)
@@ -632,6 +633,38 @@ bool MediaPlayerPrivateGStreamer::doSeek(gint64 position, float rate, GstSeekFla
         GST_SEEK_TYPE_SET, startTime, GST_SEEK_TYPE_SET, endTime);
 }
 
+void MediaPlayerPrivateGStreamer::updatePlaybackRate()
+{
+    if (!m_changingRate)
+        return;
+
+    float currentPosition = static_cast<float>(playbackPosition() * GST_SECOND);
+    bool mute = false;
+
+    INFO_MEDIA_MESSAGE("Set Rate to %f", m_playbackRate);
+
+    if (m_playbackRate > 0) {
+        // Mute the sound if the playback rate is too extreme and
+        // audio pitch is not adjusted.
+        mute = (!m_preservesPitch && (m_playbackRate < 0.8 || m_playbackRate > 2));
+    } else {
+        if (currentPosition == 0.0f)
+            currentPosition = -1.0f;
+        mute = true;
+    }
+
+    INFO_MEDIA_MESSAGE("Need to mute audio?: %d", (int) mute);
+    if (doSeek(currentPosition, m_playbackRate, static_cast<GstSeekFlags>(GST_SEEK_FLAG_FLUSH))) {
+        g_object_set(m_playBin.get(), "mute", mute, NULL);
+        m_lastPlaybackRate = m_playbackRate;
+    } else {
+        m_playbackRate = m_lastPlaybackRate;
+        ERROR_MEDIA_MESSAGE("Set rate to %f failed", m_playbackRate);
+    }
+    m_changingRate = false;
+    m_player->rateChanged();
+}
+
 bool MediaPlayerPrivateGStreamer::paused() const
 {
     if (m_isEndReached) {
@@ -830,48 +863,38 @@ void MediaPlayerPrivateGStreamer::newTextSample()
 void MediaPlayerPrivateGStreamer::setRate(float rate)
 {
     // Avoid useless playback rate update.
-    if (m_playbackRate == rate)
+    if (m_playbackRate == rate) {
+        // and make sure that upper layers were notified if rate was set
+
+        if (!m_changingRate && m_player->rate() != m_playbackRate)
+            m_player->rateChanged();
         return;
+    }
+
+    if (isLiveStream()) {
+        // notify upper layers that we cannot handle passed rate.
+        m_changingRate = false;
+        m_player->rateChanged();
+        return;
+    }
 
     GstState state;
     GstState pending;
+
+    m_playbackRate = rate;
+    m_changingRate = true;
 
     gst_element_get_state(m_playBin.get(), &state, &pending, 0);
     if ((state != GST_STATE_PLAYING && state != GST_STATE_PAUSED)
         || (pending == GST_STATE_PAUSED))
         return;
 
-    if (isLiveStream())
-        return;
-
-    m_playbackRate = rate;
-    m_changingRate = true;
-
     if (!rate) {
         changePipelineState(GST_STATE_PAUSED);
         return;
     }
 
-    float currentPosition = static_cast<float>(playbackPosition() * GST_SECOND);
-    bool mute = false;
-
-    INFO_MEDIA_MESSAGE("Set Rate to %f", rate);
-    if (rate > 0) {
-        // Mute the sound if the playback rate is too extreme and
-        // audio pitch is not adjusted.
-        mute = (!m_preservesPitch && (rate < 0.8 || rate > 2));
-    } else {
-        if (currentPosition == 0.0f)
-            currentPosition = -1.0f;
-        mute = true;
-    }
-
-    INFO_MEDIA_MESSAGE("Need to mute audio?: %d", (int) mute);
-
-    if (!doSeek(currentPosition, rate, static_cast<GstSeekFlags>(GST_SEEK_FLAG_FLUSH)))
-        ERROR_MEDIA_MESSAGE("Set rate to %f failed", rate);
-    else
-        g_object_set(m_playBin.get(), "mute", mute, NULL);
+    updatePlaybackRate();
 }
 
 void MediaPlayerPrivateGStreamer::setPreservesPitch(bool preservesPitch)
@@ -1394,11 +1417,6 @@ void MediaPlayerPrivateGStreamer::updateStates()
         } else
             m_paused = true;
 
-        if (m_changingRate) {
-            m_player->rateChanged();
-            m_changingRate = false;
-        }
-
         if (m_requestedState == GST_STATE_PAUSED && state == GST_STATE_PAUSED) {
             shouldUpdatePlaybackState = true;
             LOG_MEDIA_MESSAGE("Requested state change to %s was completed", gst_element_state_get_name(state));
@@ -1453,12 +1471,15 @@ void MediaPlayerPrivateGStreamer::updateStates()
         m_player->readyStateChanged();
     }
 
-    if (m_seekIsPending && getStateResult == GST_STATE_CHANGE_SUCCESS && (state == GST_STATE_PAUSED || state == GST_STATE_PLAYING)) {
-        LOG_MEDIA_MESSAGE("[Seek] committing pending seek to %f", m_seekTime);
-        m_seekIsPending = false;
-        m_seeking = doSeek(toGstClockTime(m_seekTime), m_player->rate(), static_cast<GstSeekFlags>(GST_SEEK_FLAG_FLUSH | GST_SEEK_FLAG_ACCURATE));
-        if (!m_seeking)
-            LOG_MEDIA_MESSAGE("[Seek] seeking to %f failed", m_seekTime);
+    if (getStateResult == GST_STATE_CHANGE_SUCCESS && state >= GST_STATE_PAUSED) {
+        updatePlaybackRate();
+        if (m_seekIsPending) {
+            LOG_MEDIA_MESSAGE("[Seek] committing pending seek to %f", m_seekTime);
+            m_seekIsPending = false;
+            m_seeking = doSeek(toGstClockTime(m_seekTime), m_player->rate(), static_cast<GstSeekFlags>(GST_SEEK_FLAG_FLUSH | GST_SEEK_FLAG_ACCURATE));
+            if (!m_seeking)
+                LOG_MEDIA_MESSAGE("[Seek] seeking to %f failed", m_seekTime);
+        }
     }
 }
 
