Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h
@@ -147,6 +147,7 @@ private:
     void processTableOfContentsEntry(GstTocEntry*, GstTocEntry* parent);
 #endif
     bool doSeek(gint64 position, float rate, GstSeekFlags seekType);
+    void updatePlaybackRate();
 
 
     virtual String engineDescription() const { return "GStreamer"; }
@@ -174,6 +175,7 @@ private:
     bool m_canFallBackToLastFinishedSeekPositon;
     bool m_buffering;
     float m_playbackRate;
+    float m_lastPlaybackRate;
     bool m_errorOccured;
     mutable gfloat m_mediaDuration;
     bool m_downloadFinished;
